--- a/index.html
+++ b/index.html
@@ -9,144 +9,129 @@
       font-family: 'ArabicFont';
       src: url('arabic.ttf') format('truetype');
     }
-
     body {
       font-family: 'ArabicFont', sans-serif;
-      background: #010409;
+      background: #050910;
       color: white;
       margin: 0;
-      padding: 20px;
+      padding: 0;
       text-align: center;
-      overflow-x: hidden;
     }
 
-    /* انميشن اسم الاداة */
-    .app-title {
-      font-size: 2em;
-      font-weight: bold;
-      background: linear-gradient(90deg, #00aaff, #ff00ff, #2ecc71);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: rainbow 3s linear infinite;
-      margin-bottom: 5px;
-    }
-
-    @keyframes rainbow {
-      0% {background-position:0% 50%;}
-      50% {background-position:100% 50%;}
-      100% {background-position:0% 50%;}
-    }
-
-    .start-dialog {
+    /* ========== صفحة إدخال البيانات ========== */
+    #introDialog {
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: rgba(0, 0, 0, 0.8);
+      background: rgba(0,0,0,0.85);
       display: flex;
       align-items: center;
       justify-content: center;
-      z-index: 2000;
+      z-index: 10000;
     }
 
-    .start-box {
-      background: #0b2540;
+    .dialog-content {
+      background: #0d1b2a;
       border: 2px solid #555;
-      border-radius: 10px;
+      border-radius: 12px;
       padding: 20px;
-      width: 340px;
+      max-width: 400px;
+      width: 90%;
       text-align: center;
     }
 
-    .start-box h3 {
+    .dialog-content img {
+      width: 150px;
       margin-bottom: 10px;
     }
 
-    .start-box input {
-      width: 90%;
-      padding: 8px;
+    .title {
+      font-size: 2em;
+      font-weight: bold;
+      background: linear-gradient(90deg, #00ffff, #ff00ff, #ffff00);
+      background-size: 200% 200%;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: gradientShift 3s infinite alternate;
+    }
+
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      100% { background-position: 100% 50%; }
+    }
+
+    .rules {
+      text-align: right;
+      font-size: 0.9em;
       margin: 10px 0;
-      border-radius: 6px;
-      border: 1px solid #555;
+      animation: blinkRules 1.5s infinite alternate;
+    }
+
+    @keyframes blinkRules {
+      0% { color: #aaa; }
+      100% { color: #ff4d4d; }
+    }
+
+    input[type="text"] {
+      width: 90%;
+      padding: 10px;
+      border-radius: 8px;
+      border: none;
+      margin: 10px 0;
       text-align: center;
-      font-family: 'ArabicFont';
+      font-size: 1em;
     }
 
-    .start-box input.shake {
-      animation: shake 0.3s;
-      border-color: #e74c3c;
+    .promo-btn {
+      background: #333;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      border-radius: 8px;
+      padding: 10px;
+      margin: 10px auto;
+      cursor: pointer;
+      width: 90%;
     }
 
-    @keyframes shake {
-      0%, 100% { transform: translateX(0); }
-      25% { transform: translateX(-5px); }
-      50% { transform: translateX(5px); }
-      75% { transform: translateX(-5px); }
+    .promo-btn img {
+      width: 20px;
+      height: 20px;
     }
 
-    .radio-group {
+    .options {
       display: flex;
       justify-content: space-around;
       margin: 10px 0;
     }
 
-    .radio-option {
+    .option-label {
       display: flex;
       align-items: center;
       gap: 5px;
     }
 
-    .radio-option img {
-      width: 28px;
-      height: 28px;
-    }
-
-    button {
-      flex: 1;
-      padding: 12px;
-      font-size: 1em;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      color: white;
-      transition: transform 0.2s ease;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 8px;
-      font-family: 'ArabicFont', sans-serif;
-    }
-
-    button:active {
-      transform: scale(0.95);
+    .option-label img {
+      width: 24px;
+      height: 24px;
     }
 
     .confirm-btn {
       background: #1d6fb8;
-      width: 100%;
-      margin-top: 10px;
+      color: white;
+      border: none;
+      border-radius: 10px;
+      width: 90%;
+      padding: 12px;
+      font-size: 1.2em;
+      cursor: pointer;
     }
 
-    .promo {
-      background: #333;
-      width: 100%;
-      margin: 10px 0;
-    }
-
-    .promo img { width:18px; height:18px; }
-
-    .conditions {
-      font-size: 0.8em;
-      color: #aaa;
-      text-align: left;
-      margin-top: 5px;
-      line-height: 1.4em;
-    }
-
-    /* الصفحة الرئيسية */
-    .container {
-      max-width: 400px;
-      margin: auto;
+    /* ========== صفحة التوقع ========== */
+    #mainPage {
       display: none;
+      padding: 20px;
     }
 
     .user-info {
@@ -154,16 +139,16 @@
       align-items: center;
       justify-content: center;
       gap: 8px;
-      font-size: 0.9em;
+      font-size: 1.1em;
       margin-bottom: 10px;
     }
 
     .online-dot {
       width: 10px;
       height: 10px;
-      background: #2ecc71;
+      background: limegreen;
       border-radius: 50%;
-      box-shadow: 0 0 5px #2ecc71;
+      display: inline-block;
     }
 
     .circle-container {
@@ -180,194 +165,172 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 2em;
+      font-size: 1.8em;
+      color: white;
       position: relative;
       z-index: 2;
     }
 
-    .ring {
+    .ring1, .ring2 {
       position: absolute;
-      border: 3px solid transparent;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      border: 3px solid;
       border-radius: 50%;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
       box-sizing: border-box;
-      z-index: 1;
+      animation: spin 6s linear infinite;
     }
-
-    .ring1 {
-      border-top: 3px solid #00aaff;
-      border-right: 3px solid #00aaff;
-      animation: spin 3s linear infinite;
-    }
-
-    .ring2 {
-      border-bottom: 3px solid #ff00ff;
-      border-left: 3px solid #ff00ff;
-      animation: spinReverse 4s linear infinite;
-    }
+    .ring1 { border-color: cyan transparent cyan transparent; }
+    .ring2 { border-color: magenta transparent magenta transparent; animation-direction: reverse; }
 
     @keyframes spin {
-      from { transform: rotate(0deg); }
-      to { transform: rotate(360deg); }
-    }
-    @keyframes spinReverse {
-      from { transform: rotate(0deg); }
-      to { transform: rotate(-360deg); }
+      0% { transform: rotate(0); }
+      100% { transform: rotate(360deg); }
     }
 
     .buttons {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       gap: 10px;
-      margin-bottom: 10px;
+      margin: 15px 0;
     }
 
-    .predict { background: #2ecc71; }
-    .reset { background: #e74c3c; }
-    .telegram, .promo-main { 
+    .buttons button {
+      flex: 1;
+      max-width: 140px;
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      font-size: 1em;
+      cursor: pointer;
+    }
+
+    .predict { background: #2ecc71; color: white; }
+    .reset { background: #e74c3c; color: white; }
+
+    .telegram, .promo-main {
       background: #1d6fb8;
-      width: 100%;
-      margin-top: 10px;
+      width: 90%;
+      max-width: 300px;
+      margin: 8px auto;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 8px;
+      font-size: 1em;
+      border-radius: 10px;
+      padding: 10px;
+      cursor: pointer;
+    }
+
+    .telegram img, .promo-main img {
+      width: 20px;
+      height: 20px;
     }
 
     .info-box {
-      margin: 15px 0;
-      padding: 10px;
-      border: 1px solid #555;
+      background: rgba(255,255,255,0.05);
+      border: 1px solid #777;
       border-radius: 8px;
-      background: rgba(255, 255, 255, 0.05);
-      font-size: 0.8em;
-      line-height: 1.5em;
+      padding: 10px;
+      max-width: 350px;
+      margin: 10px auto;
+      font-size: 0.85em;
+      line-height: 1.6em;
     }
 
     #alerts {
       position: fixed;
-      bottom: 15px;
+      bottom: 20px;
       left: 50%;
       transform: translateX(-50%);
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 10px;
-      z-index: 999;
+      z-index: 1000;
     }
 
     .alert-box {
-      padding: 10px 15px;
-      border-radius: 10px;
+      background: #222;
       border: 1px solid #777;
+      border-radius: 10px;
+      padding: 10px 15px;
       opacity: 0;
       transform: translateY(30px);
       transition: all 0.5s ease;
-      font-size: 0.9em;
       min-width: 250px;
       text-align: center;
-      box-shadow: 0 0 20px rgba(0,0,0,0);
     }
 
-    .alert-box.show {
-      opacity: 1;
-      transform: translateY(0);
-    }
+    .alert-box.show { opacity: 1; transform: translateY(0); }
+    .alert-box.hide { opacity: 0; transform: translateY(30px); }
 
-    .alert-box.hide {
-      opacity: 0;
-      transform: translateY(30px);
-      box-shadow: 0 0 20px rgba(0,0,0,0);
-    }
-
-    .dialog {
+    .dialog-popup {
       position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%) scale(0.8);
-      background: #0b2540;
-      border: 2px solid #555;
-      border-radius: 10px;
+      top: 50%; left: 50%;
+      transform: translate(-50%, -50%);
+      background: #0d1b2a;
+      border: 2px solid #777;
+      border-radius: 12px;
       padding: 20px;
-      color: white;
       text-align: center;
-      z-index: 1000;
-      opacity: 0;
-      transition: all 0.3s ease;
+      display: none;
+      z-index: 2000;
     }
 
-    .dialog.show {
-      opacity: 1;
-      transform: translate(-50%, -50%) scale(1);
-      animation: bounceIn 0.3s ease;
-    }
-
-    .dialog button {
+    .ok-btn {
       background: #1d6fb8;
-      padding: 8px 15px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
       color: white;
-      font-family: 'ArabicFont';
+      border: none;
+      padding: 10px 20px;
       margin-top: 10px;
-    }
-
-    @keyframes bounceIn {
-      0% { transform: translate(-50%, -50%) scale(0.7); }
-      50% { transform: translate(-50%, -50%) scale(1.05); }
-      100% { transform: translate(-50%, -50%) scale(1); }
+      border-radius: 8px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
 
   <!-- ديالوج البداية -->
-  <div class="start-dialog" id="startDialog">
-    <div class="start-box">
-      <div class="app-title">WOLF CRASH</div>
-      <h3>أدخل معلوماتك</h3>
-      <input type="number" id="playerIdInput" placeholder="أدخل الـ ID (10 أرقام)">
-
-      <!-- زر البروموكود -->
-      <button class="promo" onclick="copyCode()">
-        <img src="files.png" class="icon">
-        الرمز الترويجي: EVO3
-      </button>
-
-      <div class="radio-group">
-        <label class="radio-option">
-          <input type="radio" name="platform" value="1xbet">
-          <img src="imag1.png">
-          <span>1XBET</span>
+  <div id="introDialog">
+    <div class="dialog-content">
+      <img src="ela.png" alt="Logo">
+      <div class="title">WOLF CRASH</div>
+      <div class="rules">
+        شروط تشغيل أداة WOLF CRASH :<br>
+        1- التسجيل بالبروموكود EVO3<br>
+        2- إيداع 3 دولار أو 150 جنيه مصري فما فوق<br>
+        3- العب من دون طمع
+      </div>
+      <input type="text" id="userId" placeholder="أدخل الـ ID (10 أرقام)" maxlength="10">
+      <div class="promo-btn" onclick="copyPromo()">
+        <img src="files.png" alt="copy"> الرمز الترويجي: EVO3
+      </div>
+      <div class="options">
+        <label class="option-label">
+          <input type="radio" name="site" value="1xbet">
+          <img src="imag1.png" alt="1xbet"> 1XBET
         </label>
-        <label class="radio-option">
-          <input type="radio" name="platform" value="xparibet" checked>
-          <img src="imag2.png">
-          <span>XpariBet</span>
+        <label class="option-label">
+          <input type="radio" name="site" value="xpari">
+          <img src="imag2.png" alt="XpariBet"> XpariBet (موصى به)
         </label>
       </div>
-
-      <div class="conditions">
-        شروط تشغيل اداة Wold Crash : <br>
-        1-التسجيل بالبروموكود EVO3<br>
-        2-ايداع 3 دولار او 150 جنيه مصري فما فوق<br>
-        3-العب مندون طمع
-      </div>
-
-      <button class="confirm-btn" onclick="confirmStart()">تأكيد</button>
+      <button class="confirm-btn" onclick="confirmData()">تأكيد</button>
     </div>
   </div>
 
-  <!-- الصفحة الرئيسية -->
-  <div class="container">
+  <!-- صفحة التوقع -->
+  <div id="mainPage">
     <div class="user-info">
-      <span id="userIdDisplay">ID: --------</span>
-      <div class="online-dot"></div>
+      <span id="userIdText"></span>
+      <span class="online-dot"></span>
     </div>
 
     <div class="circle-container">
-      <div class="ring ring1"></div>
-      <div class="ring ring2"></div>
+      <div class="ring1"></div>
+      <div class="ring2"></div>
       <div class="circle" id="multiplier">X0.00</div>
     </div>
 
@@ -376,52 +339,50 @@
       <button class="reset" onclick="reset()">إعادة تعيين</button>
     </div>
 
-    <button class="telegram">
-      <img src="telegram.png" class="icon">
-      انضم للقناة
-    </button>
+    <div class="telegram">
+      <img src="telegram.png" alt="Telegram"> انضم للقناة
+    </div>
 
-    <button class="promo-main" onclick="copyCode()">
-      <img src="files.png" class="icon">
-      الرمز الترويجي: EVO3
-    </button>
+    <div class="promo-main" onclick="copyPromoDialog()">
+      <img src="files.png" alt="Promo"> الرمز الترويجي: EVO3
+    </div>
 
     <div class="info-box">
       تم تصميم هذه الأداة لتحليل لعبة Crash على تطبيقات XpariBet و1xbet باستخدام البروموكود EVO3 🎯💥، لمساعدة اللاعبين على فهم الأنماط المحتملة واتخاذ قرارات أذكى أثناء اللعب 📊🎮. يمكنك الآن الانضمام إلى قناة التيليجرام بالزر بالأعلى 🔗📲، حظًا موفقًا لك 🍀!
     </div>
+
+    <div id="alerts"></div>
   </div>
 
-  <div id="alerts"></div>
-
-  <!-- ديالوج البروموكود -->
-  <div class="dialog" id="dialog">
-    <h3>نجاح ✅</h3>
+  <!-- ديالوج نسخ البروموكود -->
+  <div class="dialog-popup" id="promoDialog">
+    <h2>نجاح ✅</h2>
     <p>تم نسخ البروموكود!</p>
-    <button onclick="closeDialog()">حسنا</button>
+    <button class="ok-btn" onclick="closeDialog()">حسنًا</button>
   </div>
-
-  <audio id="alertSound" src="https://actions.google.com/sounds/v1/alarms/beep_short.ogg" preload="auto"></audio>
 
   <script>
-    let currentID = null;
+    function copyPromo() {
+      navigator.clipboard.writeText("EVO3");
+      alert("✅ تم نسخ البروموكود!");
+    }
 
-    function confirmStart() {
-      const input = document.getElementById('playerIdInput');
-      const playerId = input.value;
-      if (/^\d{10}$/.test(playerId)) {
-        currentID = playerId;
-        document.getElementById('userIdDisplay').textContent = `ID: ${playerId}`;
-        document.getElementById('startDialog').style.display = 'none';
-        document.querySelector('.container').style.display = 'block';
-      } else {
-        input.classList.add('shake');
-        setTimeout(() => input.classList.remove('shake'), 300);
+    function confirmData() {
+      const userId = document.getElementById('userId').value;
+      if (userId.length !== 10 || isNaN(userId)) {
+        alert("❌ يجب إدخال رقم مكون من 10 أرقام!");
+        return;
       }
+      document.getElementById("introDialog").style.display = "none";
+      document.getElementById("mainPage").style.display = "block";
+      document.getElementById("userIdText").textContent = "ID: " + userId;
+      setInterval(generateAlert, 12000);
     }
 
     function predict() {
+      const randomChance = Math.random();
       let random;
-      if (Math.random() < 0.25) {
+      if (randomChance < 0.25) {
         random = (Math.random() * (15.99 - 8.00) + 8.00).toFixed(2);
       } else {
         random = (Math.random() * (7.99 - 2.00) + 2.00).toFixed(2);
@@ -430,16 +391,16 @@
     }
 
     function reset() {
-      document.getElementById('multiplier').textContent = 'X0.00';
+      document.getElementById('multiplier').textContent = "X0.00";
     }
 
-    function copyCode() {
-      navigator.clipboard.writeText('EVO3');
-      document.getElementById('dialog').classList.add('show');
+    function copyPromoDialog() {
+      navigator.clipboard.writeText("EVO3");
+      document.getElementById("promoDialog").style.display = "block";
     }
 
     function closeDialog() {
-      document.getElementById('dialog').classList.remove('show');
+      document.getElementById("promoDialog").style.display = "none";
     }
 
     function generateAlert() {
@@ -447,14 +408,9 @@
       const alertBox = document.createElement('div');
       alertBox.className = 'alert-box';
 
-      const playerID = Math.floor(Math.random() * 9000000000) + 1000000000;
+      const playerID = Math.floor(1000000000 + Math.random() * 9000000000);
       const chance = (Math.random() * (15.99 - 2.00) + 2.00).toFixed(2);
       const money = (Math.floor(Math.random() * 10000) + 450);
-
-      const colors = ["#2ecc71", "#3498db", "#9b59b6", "#e67e22"];
-      const randomColor = colors[Math.floor(Math.random() * colors.length)];
-      alertBox.style.background = randomColor;
-      alertBox.style.boxShadow = `0 0 20px ${randomColor}aa`;
 
       alertBox.innerHTML = `
         <strong>اشعار لعب:</strong><br>
@@ -462,19 +418,14 @@
         الفرصة: X ${chance}<br>
         الأموال: ${money} EGP ✅
       `;
-
       alertsContainer.appendChild(alertBox);
-      document.getElementById('alertSound').play();
-
-      setTimeout(() => alertBox.classList.add('show'), 100);
-      setTimeout(() => {
+      setTimeout(()=> alertBox.classList.add('show'), 100);
+      setTimeout(()=>{
         alertBox.classList.remove('show');
         alertBox.classList.add('hide');
-        setTimeout(() => alertsContainer.removeChild(alertBox), 500);
+        setTimeout(()=> alertsContainer.removeChild(alertBox), 500);
       }, 12000);
     }
-
-    setInterval(generateAlert, 12000);
   </script>
 
 </body>
