--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       text-align: center;
     }
 
-    /* ========== صفحة إدخال البيانات ========== */
+    /* ديالوج البداية */
     #introDialog {
       position: fixed;
       top: 0; left: 0;
@@ -34,15 +34,27 @@
       background: #0d1b2a;
       border: 2px solid #555;
       border-radius: 12px;
-      padding: 20px;
-      max-width: 400px;
-      width: 90%;
+      padding: 15px;
+      max-width: 350px;
+      width: 85%;
       text-align: center;
+      animation: fadeIn 0.5s ease;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.9); }
+      to { opacity: 1; transform: scale(1); }
     }
 
     .dialog-content img {
-      width: 150px;
-      margin-bottom: 10px;
+      width: 170px;
+      margin-bottom: 8px;
+      animation: logoPop 1s ease-in-out infinite alternate;
+    }
+
+    @keyframes logoPop {
+      0% { transform: scale(1); }
+      100% { transform: scale(1.05); }
     }
 
     .title {
@@ -53,6 +65,7 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       animation: gradientShift 3s infinite alternate;
+      margin-bottom: 5px;
     }
 
     @keyframes gradientShift {
@@ -80,6 +93,15 @@
       margin: 10px 0;
       text-align: center;
       font-size: 1em;
+      transition: all 0.3s ease;
+    }
+
+    .shake { animation: shake 0.3s ease; }
+    @keyframes shake {
+      0%, 100% { transform: translateX(0); }
+      25% { transform: translateX(-5px); }
+      50% { transform: translateX(5px); }
+      75% { transform: translateX(-5px); }
     }
 
     .promo-btn {
@@ -93,12 +115,11 @@
       margin: 10px auto;
       cursor: pointer;
       width: 90%;
+      transition: transform 0.2s ease;
     }
+    .promo-btn:active { transform: scale(0.95); }
 
-    .promo-btn img {
-      width: 20px;
-      height: 20px;
-    }
+    .promo-btn img { width: 20px; height: 20px; }
 
     .options {
       display: flex;
@@ -106,16 +127,8 @@
       margin: 10px 0;
     }
 
-    .option-label {
-      display: flex;
-      align-items: center;
-      gap: 5px;
-    }
-
-    .option-label img {
-      width: 24px;
-      height: 24px;
-    }
+    .option-label { display: flex; align-items: center; gap: 5px; }
+    .option-label img { width: 26px; height: 26px; }
 
     .confirm-btn {
       background: #1d6fb8;
@@ -126,168 +139,77 @@
       padding: 12px;
       font-size: 1.2em;
       cursor: pointer;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
+    .confirm-btn:active { transform: scale(0.95); box-shadow: 0 0 10px #1d6fb8; }
 
-    /* ========== صفحة التوقع ========== */
-    #mainPage {
-      display: none;
-      padding: 20px;
-    }
+    /* صفحة التوقع */
+    #mainPage { display: none; padding: 20px; animation: fadeIn 0.5s ease; }
 
     .user-info {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 8px;
-      font-size: 1.1em;
-      margin-bottom: 10px;
+      display: flex; align-items: center; justify-content: center;
+      gap: 8px; font-size: 1.1em; margin-bottom: 10px;
     }
+    .user-info img { width: 24px; height: 24px; }
+    .online-dot { width: 10px; height: 10px; background: limegreen; border-radius: 50%; }
 
-    .online-dot {
-      width: 10px;
-      height: 10px;
-      background: limegreen;
-      border-radius: 50%;
-      display: inline-block;
+    .circle-container { position: relative; width: 130px; height: 130px; margin: 20px auto; }
+    .circle { width: 100%; height: 100%; border-radius: 50%;
+      display: flex; align-items: center; justify-content: center;
+      font-size: 1.8em; color: white; position: relative; z-index: 2;
     }
-
-    .circle-container {
-      position: relative;
-      width: 140px;
-      height: 140px;
-      margin: 20px auto;
-    }
-
-    .circle {
-      width: 100%;
-      height: 100%;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 1.8em;
-      color: white;
-      position: relative;
-      z-index: 2;
+    .pulse { animation: pulse 0.5s ease; }
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.15); }
+      100% { transform: scale(1); }
     }
 
     .ring1, .ring2 {
-      position: absolute;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      border: 3px solid;
-      border-radius: 50%;
-      box-sizing: border-box;
+      position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+      border: 3px solid; border-radius: 50%; box-sizing: border-box;
       animation: spin 6s linear infinite;
     }
     .ring1 { border-color: cyan transparent cyan transparent; }
     .ring2 { border-color: magenta transparent magenta transparent; animation-direction: reverse; }
 
-    @keyframes spin {
-      0% { transform: rotate(0); }
-      100% { transform: rotate(360deg); }
-    }
+    @keyframes spin { to { transform: rotate(360deg); } }
 
-    .buttons {
-      display: flex;
-      justify-content: center;
-      gap: 10px;
-      margin: 15px 0;
-    }
-
+    .buttons { display: flex; justify-content: center; gap: 10px; margin: 15px 0; }
     .buttons button {
-      flex: 1;
-      max-width: 140px;
-      padding: 12px;
-      border: none;
-      border-radius: 8px;
-      font-size: 1em;
-      cursor: pointer;
+      flex: 1; max-width: 140px; padding: 12px; border: none; border-radius: 8px;
+      font-size: 1em; cursor: pointer; transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
-
+    .buttons button:active { transform: scale(0.95); box-shadow: 0 0 8px white; }
     .predict { background: #2ecc71; color: white; }
     .reset { background: #e74c3c; color: white; }
 
     .telegram, .promo-main {
       background: #1d6fb8;
-      width: 90%;
-      max-width: 300px;
+      width: 90%; max-width: 300px;
       margin: 8px auto;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 8px;
-      font-size: 1em;
-      border-radius: 10px;
-      padding: 10px;
-      cursor: pointer;
+      display: flex; align-items: center; justify-content: center;
+      gap: 8px; font-size: 1em; border-radius: 10px; padding: 10px;
+      cursor: pointer; transition: transform 0.2s ease;
     }
-
-    .telegram img, .promo-main img {
-      width: 20px;
-      height: 20px;
-    }
+    .telegram img, .promo-main img { width: 20px; height: 20px; }
+    .telegram:active, .promo-main:active { transform: scale(0.95); }
 
     .info-box {
       background: rgba(255,255,255,0.05);
-      border: 1px solid #777;
-      border-radius: 8px;
-      padding: 10px;
-      max-width: 350px;
-      margin: 10px auto;
-      font-size: 0.85em;
-      line-height: 1.6em;
+      border: 1px solid #777; border-radius: 8px; padding: 10px;
+      max-width: 350px; margin: 10px auto; font-size: 0.85em; line-height: 1.6em;
     }
 
-    #alerts {
-      position: fixed;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 10px;
-      z-index: 1000;
-    }
-
+    #alerts { position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%);
+      display: flex; flex-direction: column; align-items: center; gap: 10px; z-index: 1000; }
     .alert-box {
-      background: #222;
-      border: 1px solid #777;
-      border-radius: 10px;
-      padding: 10px 15px;
-      opacity: 0;
-      transform: translateY(30px);
-      transition: all 0.5s ease;
-      min-width: 250px;
-      text-align: center;
+      background: #222; border: 1px solid #777; border-radius: 10px;
+      padding: 10px 15px; opacity: 0; transform: translateY(30px);
+      transition: all 0.5s ease; min-width: 250px; text-align: center;
     }
-
     .alert-box.show { opacity: 1; transform: translateY(0); }
     .alert-box.hide { opacity: 0; transform: translateY(30px); }
-
-    .dialog-popup {
-      position: fixed;
-      top: 50%; left: 50%;
-      transform: translate(-50%, -50%);
-      background: #0d1b2a;
-      border: 2px solid #777;
-      border-radius: 12px;
-      padding: 20px;
-      text-align: center;
-      display: none;
-      z-index: 2000;
-    }
-
-    .ok-btn {
-      background: #1d6fb8;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      margin-top: 10px;
-      border-radius: 8px;
-      cursor: pointer;
-    }
   </style>
 </head>
 <body>
@@ -304,18 +226,12 @@
         3- العب من دون طمع
       </div>
       <input type="text" id="userId" placeholder="أدخل الـ ID (10 أرقام)" maxlength="10">
-      <div class="promo-btn" onclick="copyPromo()">
-        <img src="files.png" alt="copy"> الرمز الترويجي: EVO3
-      </div>
+      <div class="promo-btn" onclick="copyPromo()"> <img src="files.png"> الرمز الترويجي: EVO3 </div>
       <div class="options">
-        <label class="option-label">
-          <input type="radio" name="site" value="1xbet">
-          <img src="imag1.png" alt="1xbet"> 1XBET
-        </label>
-        <label class="option-label">
-          <input type="radio" name="site" value="xpari">
-          <img src="imag2.png" alt="XpariBet"> XpariBet (موصى به)
-        </label>
+        <label class="option-label"><input type="radio" name="site" value="1xbet">
+          <img src="imag1.png"> 1XBET</label>
+        <label class="option-label"><input type="radio" name="site" value="xpari">
+          <img src="imag2.png"> XpariBet</label>
       </div>
       <button class="confirm-btn" onclick="confirmData()">تأكيد</button>
     </div>
@@ -324,8 +240,7 @@
   <!-- صفحة التوقع -->
   <div id="mainPage">
     <div class="user-info">
-      <span id="userIdText"></span>
-      <span class="online-dot"></span>
+      <img id="platformIcon" src=""> <span id="userIdText"></span> <span class="online-dot"></span>
     </div>
 
     <div class="circle-container">
@@ -339,26 +254,19 @@
       <button class="reset" onclick="reset()">إعادة تعيين</button>
     </div>
 
-    <div class="telegram">
-      <img src="telegram.png" alt="Telegram"> انضم للقناة
+    <div class="telegram" onclick="window.open('https://t.me/xbet_mux','_blank')">
+      <img src="telegram.png"> انضم للقناة
     </div>
 
-    <div class="promo-main" onclick="copyPromoDialog()">
-      <img src="files.png" alt="Promo"> الرمز الترويجي: EVO3
+    <div class="promo-main" onclick="copyPromo()">
+      <img src="files.png"> الرمز الترويجي: EVO3
     </div>
 
     <div class="info-box">
-      تم تصميم هذه الأداة لتحليل لعبة Crash على تطبيقات XpariBet و1xbet باستخدام البروموكود EVO3 🎯💥، لمساعدة اللاعبين على فهم الأنماط المحتملة واتخاذ قرارات أذكى أثناء اللعب 📊🎮. يمكنك الآن الانضمام إلى قناة التيليجرام بالزر بالأعلى 🔗📲، حظًا موفقًا لك 🍀!
+      تم تصميم هذه الأداة لتحليل لعبة Crash على تطبيقات XpariBet و1xbet باستخدام البروموكود EVO3 🎯💥...
     </div>
 
     <div id="alerts"></div>
-  </div>
-
-  <!-- ديالوج نسخ البروموكود -->
-  <div class="dialog-popup" id="promoDialog">
-    <h2>نجاح ✅</h2>
-    <p>تم نسخ البروموكود!</p>
-    <button class="ok-btn" onclick="closeDialog()">حسنًا</button>
   </div>
 
   <script>
@@ -368,63 +276,73 @@
     }
 
     function confirmData() {
-      const userId = document.getElementById('userId').value;
+      const userIdField = document.getElementById('userId');
+      const userId = userIdField.value;
+      const selectedPlatform = document.querySelector('input[name="site"]:checked');
+
       if (userId.length !== 10 || isNaN(userId)) {
-        alert("❌ يجب إدخال رقم مكون من 10 أرقام!");
+        userIdField.classList.add("shake");
+        setTimeout(()=> userIdField.classList.remove("shake"), 300);
         return;
       }
+      if (!selectedPlatform) {
+        alert("❌ الرجاء اختيار المنصة!");
+        return;
+      }
+
       document.getElementById("introDialog").style.display = "none";
       document.getElementById("mainPage").style.display = "block";
       document.getElementById("userIdText").textContent = "ID: " + userId;
+      document.getElementById("platformIcon").src = selectedPlatform.value === "1xbet" ? "imag1.png" : "imag2.png";
+
       setInterval(generateAlert, 12000);
     }
 
     function predict() {
+      const multiplier = document.getElementById('multiplier');
+      multiplier.classList.add("pulse");
+
       const randomChance = Math.random();
-      let random;
+      let target;
       if (randomChance < 0.25) {
-        random = (Math.random() * (15.99 - 8.00) + 8.00).toFixed(2);
+        target = (Math.random() * (15.99 - 8.00) + 8.00);
       } else {
-        random = (Math.random() * (7.99 - 2.00) + 2.00).toFixed(2);
+        target = (Math.random() * (7.99 - 2.00) + 2.00);
       }
-      document.getElementById('multiplier').textContent = `X${random}`;
+
+      let current = 0;
+      const step = target / 20;
+      let interval = setInterval(() => {
+        current += step;
+        if (current >= target) {
+          current = target;
+          clearInterval(interval);
+        }
+        multiplier.textContent = "X" + current.toFixed(2);
+      }, 50);
+
+      setTimeout(()=> multiplier.classList.remove("pulse"), 500);
     }
 
     function reset() {
       document.getElementById('multiplier').textContent = "X0.00";
     }
 
-    function copyPromoDialog() {
-      navigator.clipboard.writeText("EVO3");
-      document.getElementById("promoDialog").style.display = "block";
-    }
-
-    function closeDialog() {
-      document.getElementById("promoDialog").style.display = "none";
-    }
-
     function generateAlert() {
       const alertsContainer = document.getElementById('alerts');
       const alertBox = document.createElement('div');
       alertBox.className = 'alert-box';
-
       const playerID = Math.floor(1000000000 + Math.random() * 9000000000);
       const chance = (Math.random() * (15.99 - 2.00) + 2.00).toFixed(2);
       const money = (Math.floor(Math.random() * 10000) + 450);
-
-      alertBox.innerHTML = `
-        <strong>اشعار لعب:</strong><br>
-        إيدي اللاعب: ${playerID}<br>
-        الفرصة: X ${chance}<br>
-        الأموال: ${money} EGP ✅
-      `;
+      alertBox.innerHTML = `<strong>اشعار لعب:</strong><br>إيدي اللاعب: ${playerID}<br>الفرصة: X ${chance}<br>الأموال: ${money} EGP ✅`;
       alertsContainer.appendChild(alertBox);
       setTimeout(()=> alertBox.classList.add('show'), 100);
       setTimeout(()=>{
         alertBox.classList.remove('show');
         alertBox.classList.add('hide');
         setTimeout(()=> alertsContainer.removeChild(alertBox), 500);
-      }, 12000);
+      }, 8000);
     }
   </script>
 
